# crm_backend

./: .flake8  .gitignore  .pre-commit-config.yaml  .secrets.env  Dockerfile  Procfile  docker-compose.yaml  heroku.yml  pyproject.toml  requirements.txt
app/: urls.py  wsgi.py
app/crm/: admin.py  forms.py  models.py  resources.py  serializers.py  urls.py  utils.py  views.py  widgets.py
app/crm/migrations/: 0001_initial.py  0002_remove_client_created_by_roadmap_uuid_sale_brand_and_more.py  0004_alter_sale_sale_date_from_alter_sale_sale_date_to.py  0005_files.py  0006_sale_external_id.py  0007_client_external_id_roadmap_external_id.py  0008_salemonths.py  0009_salemonths_sale_month_amount.py  0010_alter_client_options_alter_roadmap_options_and_more.py  0011_files_created_datetime.py
app/media/: asd  sum
app/settings/: base.py
app/static/: dashboard.css
app/templates/partials/: base.html  message.html
app/user/: admin.py  forms.py  models.py  permissions.py  serializers.py  urls.py  views.py
app/user/migrations/: 0001_initial.py  0003_department_team_user_department_user_team.py
crm/: urls.py  wsgi.py
crm/crm/: admin.py  apps.py  asgi.py  forms.py  models.py  resources.py  serializers.py  settings.py  urls.py  views.py
crm/crm/migrations/: 0003_alter_client_email_alter_client_name.py
crm/crm/templates/: chart.html  chart3.html  dashboard.html
crm/settings/: base.py
crm/templates/admin/: change_form.html
crm/templates/dashboard/: index.html
crm/templates/partials/: base.html  nav.html
crm/user/: admin.py  models.py  urls.py  views.py
(+17 files in other folders)
